Add: De Ideale Wereld: Aalst carnaval

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -673,6 +673,15 @@
         <a href=""><abbr>ISBN</abbr> </a>.
       </li>
       -->
+      <!--Aalst carnaval:-->
+      <li><span lang="nl">
+        <a href="https://www.youtube.com/watch?v=G6Q5SWFB3FM">Aalst carnaval</a>
+        (<i class="ytchannel">De Ideale Wereld</i></span>, 6 minutes, 07.03.2019).
+        <br />This video is about the clichés about Jews in the
+        <a href="https://en.wikipedia.org/wiki/Carnival_of_Aalst">Carnival of <span lang="nl">Aalst</span></a>
+        in February 2019.
+      </li>
+      <!--/Aalst carnaval-->
     </ul>
 
     <!--
