Add: Associations Libres

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -237,8 +237,12 @@
           <li><i class="booktitle">Critical Thinking: Your Guide to Effective Argument, Successful Analysis and Independent Study</i> by Tom Chatfield.</li>
         </ul>
       </li>
+      <li>
+        <a href="https://associationslibres.wordpress.com/" hreflang="fr" lang="fr">Associations Libres</a>:
+        a French blog about science, skepticism and pseudoscience.
+      </li>
     </ul>
-    <!-- Many questions about teaching and assessing critical thinking on ResearchGate:
+    <!--Many questions about teaching and assessing critical thinking on ResearchGate:
       * Do you know anyone who has written a number of research (quantitative and qualitative) on critical thinking? : https://www.researchgate.net/post/Do_you_know_anyone_who_has_written_a_number_of_research_quantitative_and_qualitative_on_critical_thinking
         - Brookfield, S.D. (2012) Teaching for Critical Thinking. Tools and Techniques to Help Students Question their Assumptions, San-Francisco, Jossey-Bass.
         - http://www.criticalthinking.org/ 
