Add: Frankish: Tricks of the Mind

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2029,6 +2029,16 @@
           </li>
         </ul>
       </li>
+      <li>
+        <a href="https://www.keithfrankish.com/">Keith Frankish: Tricks of the Mind</a>:
+        website of the British-born European philosopher Keith Frankish. He explains his site's title as follows:
+        <blockquote>The title of this site, <i>Tricks of Mind</i>, reflects the role that notions of illusion and artifice play in my view of the mind, which has been heavily influenced by the work of Daniel Dennett.
+          We humans have learned a variety of subtle but powerful tricks&nbsp;— strategies of self-control, self-manipulation, and extended problem-solving&nbsp;—
+          which vastly extend the power of our biological brains and give us the sense of having a unified, phenomenally conscious mind, self, or soul. The conscious mind is a virtual system, constituted by these activities.
+        It is, in a sense, a trick of the biological mind.</blockquote>
+        See also
+        <a href="https://twitter.com/keithfrankish">Keith Frankish on Twitter</a>.
+      </li>
       <!--@@section Chinese philosophy-->
       <li>
         <a href="https://aeon.co/essays/the-influential-confucian-philosopher-you-ve-never-heard-of">The second sage&nbsp;/ The influential Confucian philosopher you’ve never heard of</a>,
