Add: Confessions of an Ex Philosopher

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2039,6 +2039,11 @@
         See also
         <a href="https://twitter.com/keithfrankish">Keith Frankish on Twitter</a>.
       </li>
+      <li>
+        <a href="https://write.as/formerly-known-as-a-philosopher/confession-of-an-ex-philosopher">Confessions of an Ex Philosopher</a>,
+        <i class="blog">Formerly known as a philosopher</i>, 03.02.2020.
+        <!--@@summarise; @@PDF-->
+      </li>
       <!--@@section Chinese philosophy-->
       <li>
         <a href="https://aeon.co/essays/the-influential-confucian-philosopher-you-ve-never-heard-of">The second sage&nbsp;/ The influential Confucian philosopher you’ve never heard of</a>,
