Add: Aalsterse carnavalisten over kritiek op Joodse praalwagen | Terzake

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -681,6 +681,10 @@
         <a href="https://en.wikipedia.org/wiki/Carnival_of_Aalst">Carnival of <span lang="nl">Aalst</span></a>
         in February 2019.
       </li>
+      <li><span lang="nl">
+        <a href="https://www.youtube.com/watch?v=57fTd8AP2zU">Aalsterse carnavalisten over kritiek op Joodse praalwagen | Terzake</a>
+        (<i class="ytchannel">Terzake</i></span> on YouTube, 6 minutes, 09.12.2029).
+      </li>
       <!--/Aalst carnaval-->
     </ul>
 
