Add: Premier Sophie Wilmès en regering halen keihard uit naar Aalst Carnaval

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -685,6 +685,10 @@
         <a href="https://www.youtube.com/watch?v=57fTd8AP2zU">Aalsterse carnavalisten over kritiek op Joodse praalwagen | Terzake</a>
         (<i class="ytchannel">Terzake</i></span> on YouTube, 6 minutes, 09.12.2029).
       </li>
+      <li><span lang="nl">
+        <a href="https://www.nieuws365.be/news/premier-sophie-wilms-en-regering-halen-keihard-uit-naar-aalst-carnaval-dit-doet-afbreuk-aan-de-reputatie-van-belgi" hreflang="nl">Premier Sophie Wilmès en regering halen keihard uit naar Aalst Carnaval: "Dit doet afbreuk aan de reputatie van België"</a>,
+        <i class="website">Nieuws364</i></span>, 23.02.2020.
+      </li>
       <!--/Aalst carnaval-->
     </ul>
 
