Add: El Mabrouk: Slechts één minister gaat in op uitnodiging voor Aalst Carnaval

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -689,6 +689,10 @@
         <a href="https://www.nieuws365.be/news/premier-sophie-wilms-en-regering-halen-keihard-uit-naar-aalst-carnaval-dit-doet-afbreuk-aan-de-reputatie-van-belgi" hreflang="nl">Premier Sophie Wilmès en regering halen keihard uit naar Aalst Carnaval: "Dit doet afbreuk aan de reputatie van België"</a>,
         <i class="website">Nieuws364</i></span>, 23.02.2020.
       </li>
+      <li><span lang="nl">El Mabrouk, Farid:
+        <a href="https://www.standaard.be/cnt/dmf20200223_04861495" hreflang="nl">Slechts één minister gaat in op uitnodiging voor Aalst Carnaval</a>,
+        <i class="newspaper">De Standaard</i></span>, 23.02.2020.
+      </li>
       <!--/Aalst carnaval-->
     </ul>
 
