Add: Smith: The university ‘free speech crisis’ has been a rightwing myth for 50 years

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2114,6 +2114,20 @@
         <i class="magazine">Quillette</i>, 13.04.2018.
         <!--@@-->
       </li>
+      <li>Smith, Evan:
+        <a href="https://www.theguardian.com/commentisfree/2020/feb/22/university-free-speech-crisis-censorship-enoch-powell">The university ‘free speech crisis’ has been a rightwing myth for 50 years</a>,
+        <i class="newspaper">The Guardian</i>, 22.02.2020.
+        <br />The author writes that,
+        <q>In the last few years, the push by some student unions to “no platform” speakers deemed to be transphobic has helped thrust the topic back into the media spotlight.</q>
+        In the last paragraphy, he adds,
+        <q>Tactics such as “no platforming” and the creation of “safe spaces” are necessary for students and activists because the threats that led to “no platforming” in the 1970s remain.</q>
+        In spite of this, the author claims there is no censorship and the government should not take action agasint “no platforming”.
+        The reason for this is that,
+        <q>The last half-century has shown that when it expresses concerns over “free speech”, the right is trying to weaponise it to its own advantage, especially when it feels it is being challenged</q>
+        and
+        <q>Freedom of speech on campus in these instances (&hellip;) often masquerades a desire for freedom from criticism.</q>
+        <!--@@Evan Smith is author of 'No Platform: A History of Anti-Fascism, Universities and the Limits of Free Speech', Routledge, 2020: https://www.routledge.com/No-Platform-A-History-of-Anti-Fascism-Universities-and-the-Limits-of/Smith/p/book/9781138591684 -->
+      </li>
       <li>Cooper, Marilyn:
         <a href="https://www.momentmag.com/martha-nussbaum-the-philosopher-queen/">Martha Nussbaum: The Philosopher Queen</a>,
         <i class="magazine">Moment (magazine)</i>, 13.07.2018.
