Add: Magnabosco: “You realize atheists are the ones who believe the most? In order to prove something doesn’t exist you have to acknowledge that it exists.”

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -646,6 +646,16 @@
           <li><q cite="https://twitter.com/tmeister1234/status/1230278202183933952">What tests have you personally done on said holy book to exercise that statement?</q> (by 🎃TransReprobate🎃 / @tmeister1234).</li>
         </ul>
       </li>
+      <li>Magnabosco, Anthony:
+        <a href="https://twitter.com/magnabosco/status/1231829229848887296">“You realize atheists are the ones who believe the most? In order to prove something doesn’t exist you have to acknowledge that it exists.”
+        <br />“Hmm. Does that rule apply to every claim or just God claims?”</a> (<i class="website">Twitter</i>, 24.02.2020).
+        <br />Twitter user Mikey Mikey / @MikeyMi09067589 responded,
+        <q cite="https://twitter.com/MikeyMi09067589/status/1231832411895238656">If I believed in The Flying Spaghetti Monster, would you have to acknowledge that it exists to convince me that there aren't any good reasons to believe in it?</q>
+        <br />Twitter user Corson Salamander / @Hellbender3629 responded,
+        <q cite="https://twitter.com/Hellbender3629/status/1231906449548288000">That makes absolutely no sense 🤨
+        that’s like saying all Christians have to believe in every god and goddess from other cultures to believe they don’t exist, which is ridiculous and idiotic.
+        Especially when Christians claim there is ‘a god’ without disproving others</q>.
+      </li>
       <li>
         <a href="https://www.youtube.com/watch?v=on0Lziov00Y">Jesus Smuggling | Is Jordan Peterson Guilty?</a>
         (<i class="ytchannel">Rationality Rules</i> on YouTube, 12 minutes, 11.02.2020).
