Add: Douglas: If God Meant to Interfere: American Literature and the Rise of the Christian Right

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -683,6 +683,15 @@
         <a href=""><abbr>ISBN</abbr> </a>.
       </li>
       -->
+      <li>Douglas, Christopher:
+        <i class="booktitle">If God Meant to Interfere: American Literature and the Rise of the Christian Right</i>. Cornell University Press, 2019. (378 pages)
+        <a href="https://www.cornellpress.cornell.edu/book/9781501746819/if-god-meant-to-interfere/"><abbr>ISBN</abbr> 9781501746819</a>.
+        <br />From the publisher's description:
+        <q>The rise of the Christian Right took many writers and literary critics by surprise, trained as we were to think that religions waned as societies became modern.
+        In <i class="booktitle">If God Meant to Interfere</i>, Christopher Douglas shows that American writers struggled to understand and respond to this new social and political force.
+        Religiously inflected literature since the 1970s must be understood in the context of this unforeseen resurgence of conservative Christianity,
+        he argues, a resurgence that realigned the literary and cultural fields.</q>
+      </li>
       <!--Aalst carnaval:-->
       <li><span lang="nl">
         <a href="https://www.youtube.com/watch?v=G6Q5SWFB3FM">Aalst carnaval</a>
