Add: Magnabosco: We're Doing it Wrong: How to Conduct More Effective Talks with Believers

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -374,6 +374,14 @@
         which
         <q>was formed to encourage and normalize critical thinking and skepticism while providing people around the world with the resources needed to develop and promote Street Epistemology.</q>
       </li>
+      <li>Magnabosco, Anthony:
+        <a href="https://www.youtube.com/watch?v=z5KJGDa_pIs">We're Doing it Wrong: How to Conduct More Effective Talks with Believers</a>
+        (<i class="ytchannel">Atheists United</i> on YouTube, 90 minutes, 30.11.2015; the date of the talk is not mentioined).
+        <!--@@continue watching at 25:40: https://youtu.be/z5KJGDa_pIs?t=1540 -->
+        <br />A partial French translation is also available:
+        <a href="https://www.youtube.com/watch?v=khrUqBiB4fc" lang="fr">Nous faisons fausse route, Anthony Magnabosco - Cours "d'épistémologie de rue" (<span lang="en">Street Epistemology</span>)</a>
+        (<i class="ytchannel">Psycholucide</i> on YouTube, 58 minutes, 17.12.2019).
+      </li>
       <li>German articles about street epistemology:
         <ul>
           <li><span lang="de">Wolf, Tobias:
