Add: Zöller: Hegels Philosophie. Eine Einführung

--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -131,6 +131,10 @@
         and this failure is largely connected to Hegel's stance towards the philosophy of</span> 
         <a href="https://en.wikipedia.org/wiki/Immanuel_Kant">Immanuel Kant</a>.
       </li>
+      <li><span lang="de">Zöller, Günter:
+        <i class="booktitle">Hegels Philosophie. Eine Einführung</i>. C. H. Beck Wissen. München: C. H. Beck</span>, February 2020.
+        <a href="https://www.chbeck.de/hegels-philosophie/product/30151458" hreflang="de"><abbr>ISBN</abbr> 978-3-406-74960-5</a>.
+      </li>
     </ul>
 
     <h2>Works</h2>
