Add Ostritsch: Hegel. Der Weltphilosoph

--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -135,6 +135,10 @@
         <i class="booktitle">Hegels Philosophie. Eine Einführung</i>. C. H. Beck Wissen. München: C. H. Beck</span>, February 2020.
         <a href="https://www.chbeck.de/hegels-philosophie/product/30151458" hreflang="de"><abbr>ISBN</abbr> 978-3-406-74960-5</a>.
       </li>
+      <li><span lang="de">Ostritsch, Sebastian:
+        <i class="booktitle">Hegel. Der Weltphilosoph</i>. Propyläen Verlag (Ullstein)</span>, March 2020. (320 pages)
+        <a href="https://www.ullstein-buchverlage.de/nc/buch/details/hegel-9783549100158.html" hreflang="de"><abbr>ISBN</abbr> 9783549100158</a>.
+      </li>
     </ul>
 
     <h2>Works</h2>
