Add: Selengut: Sacred Fury: Understanding Religious Violence

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -692,6 +692,15 @@
         Religiously inflected literature since the 1970s must be understood in the context of this unforeseen resurgence of conservative Christianity,
         he argues, a resurgence that realigned the literary and cultural fields.</q>
       </li>
+      <li>Selengut, Charles:
+        <i class="booktitle">Sacred Fury: Understanding Religious Violence</i>. Third edition. Rowman &amp; Littlefield, 2017. (250 pages)
+        <a href="https://rowman.com/ISBN/9781442276857/Sacred-Fury-Understanding-Religious-Violence-Third-Edition"><abbr>ISBN</abbr> 978-1-4422-7684-0</a>.
+        <br />From the publisher's book description:
+        <q>From <abbr>ISIS</abbr> attacks to the conflict between Israel and Palestine, Sacred Fury explores the connections between faith and violence in world religions.
+        Author Charles Selengut looks at religion as both a force for peace and for violence, and he asks key questions such as how “religious” is this violence and
+        what drives the faithful to attack in the names of their beliefs?</q>
+      </li>
+
       <!--Aalst carnaval:-->
       <li><span lang="nl">
         <a href="https://www.youtube.com/watch?v=G6Q5SWFB3FM">Aalst carnaval</a>
