Add: Mazumdar: Like cancer, coronavirus can be cured with cow dung and cow urine

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -801,6 +801,13 @@
         <a href="https://www.youtube.com/watch?v=Wd6FgYbMffk">Western Civilization is Based on Judeo-Christian Values – Debunked</a>
         (YouTube, 11 minutes, 13.06.2018).
       </li>
+      <li>Mazumdar, Prasanta:
+        <a href="https://www.newindianexpress.com/nation/2020/mar/02/like-cancer-coronavirus-can-be-cured-with-cow-dung-and-cow-urine-assam-bjp-mla-2111123.html">Like cancer, coronavirus can be cured with cow dung and cow urine: Assam <abbr title="Bharatiya Janata Party">BJP</abbr> <abbr title="Member of Legislative Assembly">MLA</abbr></a>,
+        <i class="newspaper">The New Indian Express</i>, 02.03.2020.
+        <br />Suman Haripriya, member of the Assam Legislative Assembly for the Indian People's Party (<abbr>BJP</abbr>), told the assembly
+        <q>The government is doing research on cow dung and cow urine. When cow dung is burnt, the smoke that emits has the power to destroy the virus.
+        I believe cow dung can help fight the outbreak of coronavirus.</q>
+      </li>
       <!--@@new section-->
       <li>
         <a href="https://www.rte.ie/news/ireland/2018/0612/970070-blasphemy/">Blasphemy referendum set to take place in October</a>,
