Add: Van De Mieroop: Philosophy before the Greeks: The Pursuit of Truth in Ancient Babylonia

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1843,6 +1843,10 @@
         <i class="booktitle">Ideengeschichte</i>. <abbr>UTB.</abbr> Göttingen: Vandenhoeck &amp; Ruprecht</span>, 2010. (216 pages)
         <abbr>ISBN</abbr> 978-3-8252-3314-3.
       </li>
+      <li>Van De Mieroop, Marc:
+        <i class="booktitle">Philosophy before the Greeks: The Pursuit of Truth in Ancient Babylonia</i>. Princeton University Press, 2015. (312 pages)
+        <a href="https://press.princeton.edu/books/paperback/9780691176352/philosophy-before-the-greeks"><abbr>ISBN</abbr> 9780691176352</a>.
+      </li>
     </ul>
 
     <h2>Death</h2>
