Add: quote Hebrews 11

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -79,6 +79,13 @@
         <cite>David Hume, <i class="booktitle">A Treatise of Human Nature</i> (1739-40)</cite>
       </p>
     </blockquote>
+    <blockquote class="introquote">
+      <p>
+        <q cite="https://biblehub.com/kjv/hebrews/11.htm">Now faith is the substance of things hoped for, the evidence of things not seen.</q>
+        <cite>Hebrews 11,<i class="booktitle">King James Version</i>.</cite>
+        <!--I.e. even the Bible says that faith cannot be relied upon.-->
+      </p>
+    </blockquote>
 
 
     <h2>What Should Replace Religion?</h2>
