Add: Barker: God does NOT exist

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -707,6 +707,13 @@
         Author Charles Selengut looks at religion as both a force for peace and for violence, and he asks key questions such as how “religious” is this violence and
         what drives the faithful to attack in the names of their beliefs?</q>
       </li>
+      <li>Barker, Dan:
+        <a href="https://www.youtube.com/watch?v=btJazTimH4M">God does NOT exist</a>
+        (<i class="ytchannel">OxfordUnion</i> on YouTube, 15 minutes, 21.12.2012).
+        Dan Barker used to be a minister and a firm believer in God but
+        <q cite="https://en.wikipedia.org/wiki/Dan_Barker">left Christianity in 1984.</q>
+        He later become co-president of the Freedom From Religion Foundation.
+      </li>
 
       <!--Aalst carnaval:-->
       <li><span lang="nl">
