Add: Boniface: Les Intellectuels faussaires; Les Intellectuels intègres

--- a/lijst.html
+++ b/lijst.html
@@ -621,6 +621,13 @@
       <li class="perhapsnot">DeSalle, Rob; Tattersall, Ian: <i class="booktitle">The Brain: Big Bangs, Behaviors, and Beliefs</i>. Yale University Press, 2014.
         <a href="https://yalebooks.yale.edu/book/9780300205725/brain"><abbr>ISBN</abbr> 9780300205725</a>.
       </li>
+      <li><span lang="fr"><a href="https://fr.wikipedia.org/wiki/Pascal_Boniface">Boniface, Pascal</a>:
+        <i class="booktitle">Les Intellectuels faussaires : Le triomphe médiatique des experts en mensonge</i>. Jean-Claude Gawsewitch Éditeur,</span> 2011. 
+        <abbr>ISBN</abbr> 9782350132778.
+      </li>
+      <li><span lang="fr">Boniface, Pascal: <i class="booktitle">Les Intellectuels intègres</i>. Jean-Claude Gawsewitch Éditeur,</span> 2013.
+        <abbr>ISBN</abbr> 9782350134178.
+      </li>
       <!--
       <li> : <i class="booktitle"></i>. 
         <a href=""><abbr>ISBN</abbr> </a>.
