--- a/science/ioannidis.html
+++ b/science/ioannidis.html
@@ -8,6 +8,8 @@
   <link rel="alternate stylesheet" type="text/css" media="screen" href="../css/systemcolours.css" title="System colours" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="../css/default.css" title="No colours" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="../css/meiert-qa.css" title="Meiert's QA Stylesheet" />
+  <link rel="top" href="../index.html" title="Philosophy and Science home page" />
+  <link rel="up" href="index.html" title="Science" />
   <meta name="robots" content="noindex, nofollow" />
   <meta name="googlebot" content="noindex, nofollow" />
 </head>
