Add: yourlogicalfallacyis.com

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -340,6 +340,9 @@
       <li>
         <a href="https://en.wikipedia.org/wiki/List_of_fallacies">List of fallacies</a> on <i class="wiki">Wikipedia</i>.
       </li>
+      <li>
+        <a href="https://yourlogicalfallacyis.com/">Thou shalt not commit logical fallacies</a>.
+      </li>
       <li>The Fallacy Files:
         <a href="http://www.fallacyfiles.org/taxonomy.html">Taxonomy of Logical Fallacies</a>.
       </li>
