--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -492,7 +492,7 @@
         <a href="http://teach-think.org/">Center for Teaching Thinking (<abbr>CTT</abbr>)</a>.
       </li>
       <li>Frankish, Keith:
-        <a href="https://aeon.co/ideas/what-do-you-really-believe-take-the-truth-demon-test">What do you really believe? Take the Truth-Demon Test</a>,i
+        <a href="https://aeon.co/ideas/what-do-you-really-believe-take-the-truth-demon-test">What do you really believe? Take the Truth-Demon Test</a>,
         <i class="website">Aeon</i>, 19.01.2018, updated 24.02.2020 (Creative Commons licence).
         <!--also on Big Think: https://bigthink.com/aeon-ideas/what-do-you-really-believe-take-the-truth-demon-test
           the Mec Journal: https://www.themecjournal.com/uncategorised/really-believe-take-truth-demon-test/
