--- a/philscience/index.html
+++ b/philscience/index.html
@@ -279,6 +279,10 @@
         <i class="booktitle">Wissenschaftsphilosophie. Eine Einführung in die wissenschaftliche Modellbildung</i>. Springer</span>, 2019. (XIII + 34 pages)
         <a href="https://www.springer.com/de/book/9783658238704"><abbr>ISBN</abbr> 978-3-658-23870-4</a>.
       </li>
+      <li><span lang="de">Balzer, Wolfgang; Brendel, Karl R.:
+        <i class="booktitle">Theorie der Wissenschaften</i></span>. Springer, 2019. (293 pages)
+        <a href="https://www.springer.com/de/book/9783658212216"><abbr>ISBN</abbr> 978-3-658-21221-6</a>.
+      </li>
       <!-- 
         * Ladyman, James: Understanding Philosophy of Science. Routledge, 2001. 
           (In 2009, Massimo Pigliucci wrote, "Still, I'm planning to use this book next semester in a 300-level class on philosophy of science, and I'm looking forward to the puzzled reactions of my students when they'll begin to appreciate how little we understand about how science works." http://www.amazon.com/Understanding-Philosophy-Science-James-Ladyman/dp/0415221579/
