Add: Perrett: A startup company took billions of photos from Facebook and other websites to create a facial-recognition database

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -1231,6 +1231,11 @@
         In 2017, Peter Thiel invested 200.000 <abbr>USD</abbr> in the company, Clearview, while being on Facebook's board of directors.
         <q lang="de">Da Thiel gleichzeitig im Aufsichtsrat von Facebook sitzt, hat er damit ein Unternehmen finanziert, das bewusst gegen dessen Nutzungsbedingungen verstößt.</q>
       </li>
+      <li>Perrett, Connor:
+        <a href="https://www.businessinsider.de/international/law-enforcement-using-unknown-facial-recognition-technology-facebook-photos-2020-1/?r=US&IR=T">A startup company took billions of photos from Facebook and other websites to create a facial-recognition database, and hundreds of law-enforcement agencies are using it</a>,
+        <i class="website">Business Insider</i>, 18.01.2020.
+        <!--Kirenaga Partners, a small New York-based private equity firm, is also an early investor in Clearview AI, which has also received funding from venture capitalist Peter Thiel, per the report. Thiel – Facebook’s first large outside investor, per CNN – still serves on Facebook’s board of directors.-->
+      </li>
     </ul>
 
 
