Add: Della Scala: Mind Myths: Exploring Popular Assumptions About the Mind and Brain

--- a/science/index.html
+++ b/science/index.html
@@ -753,6 +753,13 @@
         antioxidants versus free radicals, the uniqueness of the human brain, learning styles, human population growth,
         and several medical myths from a poll among doctors.
       </li>
+      <li>Della Sala, Sergio (edito):
+        <i class="booktitle">Mind Myths: Exploring Popular Assumptions About the Mind and Brain</i>. Wiley, 1999. (312 pages)
+        <a href="https://www.wiley.com/en-us/Mind+Myths%3A+Exploring+Popular+Assumptions+About+the+Mind+and+Brain-p-9780471983033"><abbr>ISBN</abbr> 978-0-471-98303-3</a>.
+        <br />The book's first article is
+        &ldquo;Whence Cometh the Myth that We Only Use Ten Percent of Our Brain?&rdquo; by
+        <a href="https://en.wikipedia.org/wiki/Barry_Beyerstein">Barry Beyerstein</a>.
+      </li>
     </ul>
     <!-- Mike Sutton: Spinach Iron Decimal Point Error Myth Busted. Tuesday, 21 December 2010: http://super-myths.blogspot.com.es/2010/12/spinach-iron-decimal-point-error-myth.html -->
     <!-- We use only 5% / 10% of our brain, e.g. as claimed by By Eason: https://www.youtube.com/watch?v=4Qlu3TJLJX4 
