Add: Wikipedia: Ten percent of the brain myth

--- a/science/index.html
+++ b/science/index.html
@@ -760,6 +760,10 @@
         &ldquo;Whence Cometh the Myth that We Only Use Ten Percent of Our Brain?&rdquo; by
         <a href="https://en.wikipedia.org/wiki/Barry_Beyerstein">Barry Beyerstein</a>.
       </li>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Ten_percent_of_the_brain_myth">Ten percent of the brain myth</a>,
+        <i class="website">Wikipedia</i>.
+      </li>
     </ul>
     <!-- Mike Sutton: Spinach Iron Decimal Point Error Myth Busted. Tuesday, 21 December 2010: http://super-myths.blogspot.com.es/2010/12/spinach-iron-decimal-point-error-myth.html -->
     <!-- We use only 5% / 10% of our brain, e.g. as claimed by By Eason: https://www.youtube.com/watch?v=4Qlu3TJLJX4 
