Add: Thrower: The Alternative Tradition: Religion and the Rejection of Religion in the Ancient World

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -86,6 +86,10 @@
         <!--I.e. even the Bible says that faith cannot be relied upon.-->
       </p>
     </blockquote>
+    <!--"History, I believe furnishes no example of a priest-ridden people maintaining a free civil government."
+          Thomas Jefferson to Alexander von Humboldt, 6 December 1813
+          https://founders.archives.gov/documents/Jefferson/03-07-02-0011
+    -->
 
 
     <h2>What Should Replace Religion?</h2>
@@ -285,6 +289,10 @@
       </li>
       <li>Mithen, Steven: <i class="booktitle">The Prehistory Of The Mind: A Search for the Origins of Art, Religion and Science</i>. [1996] London: Thames and Hudson, 2003.
         <abbr>ISBN</abbr> 0 75380 204 X.
+      </li>
+      <li>Thrower, James:
+        <i class="booktitle">The Alternative Tradition: Religion and the Rejection of Religion in the Ancient World</i>.  [1980] Religion and Society, Volume: 18. De Gruyter, 2011 (reprint).
+        <a href="https://www.degruyter.com/view/title/6049?rskey=KRSJuh&result=1"><abbr>ISBN</abbr> 978-90-279-7997-1</a>.<!-- From  €109.95  -->
       </li>
       <!--
       <li> : <i class="booktitle"></i>. 
