Update: Fourth edition of Rosenberg's Philosophy of Science: A Contemporary Introduction

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -216,13 +216,16 @@
     </ul>
     <p>Other introductions:</p>
     <ul>
-      <li>Rosenberg, Alex:
+      <li>Rosenberg, Alex; McIntyre, Lee:
         <span class="booktitle">Philosophy of Science: A Contemporary Introduction</span>.
-        Third edition. Routledge, 2012. (308 p.) 
-        <a href="https://www.routledge.com/products/9780415891776"><abbr>ISBN</abbr> 9780415891776</a>.
+        <del datetime="2020-02-26">Third edition. Routledge, 2012. (308 p.)
+        <a href="https://www.routledge.com/products/9780415891776"><abbr>ISBN</abbr> 9780415891776</a>.</del>
+        <ins>Fourth edition. Routledge, 2019. (294 pages)
+        <a href="https://www.routledge.com/Philosophy-of-Science-A-Contemporary-Introduction/Rosenberg-McIntyre/p/book/9781138331518"><abbr>ISBN</abbr>  9781138331518</a>.
+        </ins>
         <br />This book is organised by topic (<abbr>e.g.</abbr> why do laws explain?; the structure of scientific theories; induction and probability)
         and may be rather challenging for readers with no background in philosophy.
-        <!-- challenging according to at least two reviewers on Amazon.com: http://www.amazon.com/product-reviews/0415891779/ -->
+        <!--challenging according to at last two reviewers on Amazon.com: http://www.amazon.com/product-reviews/0415891779/ -->
       </li>
       <li>Godfrey-Smith, Peter: 
         <span class="booktitle">Theory and Reality: An Introduction to the Philosophy of Science</span>.
