aDd: Porter: Go read this NYT expose on a creepy new facial recognition databased used by US police

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -1236,6 +1236,11 @@
         <i class="website">Business Insider</i>, 18.01.2020.
         <!--Kirenaga Partners, a small New York-based private equity firm, is also an early investor in Clearview AI, which has also received funding from venture capitalist Peter Thiel, per the report. Thiel – Facebook’s first large outside investor, per CNN – still serves on Facebook’s board of directors.-->
       </li>
+      <li>Porter, Jon:
+        <a href="https://www.theverge.com/2020/1/20/21073718/clearview-ai-facial-recognition-database-new-york-times-investigation-go-read-this">Go read this <abbr>NYT</abbr> expose on a creepy new facial recognition database used by <abbr>US</abbr> police</a>,
+        <i class="website">The Verge</i>, 20.01.2020.
+        <br /><q>Hundreds of law enforcement agencies across the US have started using a new facial recognition system from Clearview <abbr>AI</abbr>, a new investigation by The New York Times has revealed. The database is made up of billions of images scraped from millions of sites including Facebook, YouTube, and Venmo.</q>
+      </li>
     </ul>
 
 
