Add: Devlin: AI systems claiming to 'read' emotions pose discrimination risks

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -1241,6 +1241,13 @@
         <i class="website">The Verge</i>, 20.01.2020.
         <br /><q>Hundreds of law enforcement agencies across the US have started using a new facial recognition system from Clearview <abbr>AI</abbr>, a new investigation by The New York Times has revealed. The database is made up of billions of images scraped from millions of sites including Facebook, YouTube, and Venmo.</q>
       </li>
+      <li>Devlin, Hannah:
+        <a href="https://www.theguardian.com/technology/2020/feb/16/ai-systems-claiming-to-read-emotions-pose-discrimination-risks"><abbr>AI</abbr> systems claiming to 'read' emotions pose discrimination risks</a>,
+        <i class="newspaper">The Guardian</i>, 16.02.2020.
+        <br />Quote:
+        <q>Lisa Feldman Barrett, professor of psychology at Northeastern University, said that such technologies appear to disregard a growing body of evidence undermining the notion that the basic facial expressions are universal across cultures.
+        As a result, such technologies – some of which are already being deployed in real-world settings – run the risk of being unreliable or discriminatory, she said.</q>
+      </li>
     </ul>
 
 
