Add: The Sentences Computers Can't Understand, But Humans Can

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -1248,6 +1248,13 @@
         <q>Lisa Feldman Barrett, professor of psychology at Northeastern University, said that such technologies appear to disregard a growing body of evidence undermining the notion that the basic facial expressions are universal across cultures.
         As a result, such technologies – some of which are already being deployed in real-world settings – run the risk of being unreliable or discriminatory, she said.</q>
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=m3vIEKWrP9Q">The Sentences Computers Can't Understand, But Humans Can</a>
+        (<i class="ytchannel">Tom Scott</i> on YouTube, 5 minutes, 17.02.2020.
+        <br />This video is about natural language processing and the
+        <a href="https://en.wikipedia.org/wiki/Winograd_Schema_Challenge">Winograd schema</a>.
+        <!--?See also https://github.com/openai/gpt-2 -->
+      </li>
     </ul>
 
 
