Add: Stolton: EU police plan massive facial recognition database

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -1255,6 +1255,12 @@
         <a href="https://en.wikipedia.org/wiki/Winograd_Schema_Challenge">Winograd schema</a>.
         <!--?See also https://github.com/openai/gpt-2 -->
       </li>
+      <li>Stolton, Samuel:
+        <a href="https://www.euractiv.com/section/digital/news/eu-police-plan-massive-facial-recognition-database/"><abbr>EU</abbr> police plan massive facial recognition database</a>,
+        <i class="website">EURACTIV.com</i>, 24.02.2020.
+        (German translation:
+        <a href="https://www.euractiv.de/section/digitale-agenda/news/europaeische-polizeibehoerden-planen-gemeinsame-gesichtserkennungsdatenbank/" hreflang="de" lang="de">Europäische Polizeibehörden planen gemeinsame Gesichtserkennungsdatenbank</a>.)
+      </li>
     </ul>
 
 
