--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -161,6 +161,19 @@
         <a href="http://www.houtekiet.be/boeken/p/detail/atheisme-als-basis-voor-de-moraal"><abbr>ISBN</abbr> 9789089242563</a>.
         <!--Review: https://www.dewereldmorgen.be/artikel/2013/12/30/atheisme-als-basis-voor-de-moraal-een-rijk-en-moedig-boek/ -->
       </li>
+      <li>Warnock, Mary:
+        <a href="https://fivebooks.com/best-books/mary-warnock-godless-morality/">The best books on Morality Without God</a>,
+        <i class="website">Five Books</i> (April 2020?). Mary Warnock recommends the following books:
+        <ul>
+          <li><i class="booktitle">Dialogues and Natural History of Religion</i> by David Hume (published posthumously in 1779),</li>
+          <li><i class="booktitle">The Good Man Jesus and the Scoundrel Christ</i> by Philip Pullman (2010),</li>
+          <li><i class="booktitle">Godless Morality</i> by <a href="https://en.wikipedia.org/wiki/Richard_Holloway">Richard Holloway</a> (2010),</li>
+          <li><i class="booktitle">The Collected Philosophical Papers of G.E.M. Anscombe</i>
+            by <a href="https://en.wikipedia.org/wiki/G._E._M._Anscombe">Gertrude Elizabeth Margaret Anscombe</a> (1919 – 2001),
+          </li>
+          <li><i class="booktitle">Mansfield Park</i> by Jane Austen (1814).</li>
+        </ul>
+      </li>
     </ul>
 
     <h2>Ethics or Morality Based on Science</h2>
