Add: Peter Boghossia, Twitter, 15.04.2020

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -610,6 +610,15 @@
         (<i class="ytchannel">Yannis Haralambous</i> on YouTube, 15 minutes, 12.12.2013).
         This video is part of an undergraduate Logic class.
       </li>
+      <li><a href="https://twitter.com/peterboghossian/status/1250535629785423874">Peter Boghossian / @peterboghossian on Twitter, 15.04.2020</a>:
+        <q cite="https://twitter.com/peterboghossian/status/1250535629785423874">
+        This is a fascinating glimpse into a deranged worldview of a leading fat activist.<br />
+        Don’t do any actual intellectual work to become respected, don’t make arguments—just dance around a sculpture you find problematic and demand its removal.</q>
+        See
+        <a href="https://twitter.com/thebeefer/status/1097550696436649986">Charlotte Cooper's thread from February 2019</a>
+        about a fatphobic sculpture that was decommissioned in the Wellcome Collection's Obesity gallery in London.
+        <!-- including link to https://obesitytimebomb.blogspot.com/2016/10/how-to-killjoy-obesity-display-one.html -->
+      </li>
     </ul>
   </main>
 
