Add: Carter et al: The Trump Administration Has Attacked Science 100 Times ... and Counting

--- a/science/index.html
+++ b/science/index.html
@@ -870,6 +870,11 @@
         <i class="website">Quartz</i>, 05.09.2017.
         <!--@@PDF-->
       </li>
+      <li>Carter, Jacob; Desikan, Anita; Goldman, Gretchen:
+        <a href="https://blogs.scientificamerican.com/observations/the-trump-administration-has-attacked-science-100-times-and-counting/">The Trump Administration Has Attacked Science 100 Times ... and Counting</a>,
+        <i class="blog">Scientific American Blog Network</i>, 29.05.2019.
+        <!-- @@PDF-->
+      </li>
       <li>The Young Turks:
         <a href="https://www.youtube.com/watch?v=nz7QKcSlk0g">Fox News: Algebra is Liberal Agenda!</a>
         (YouTube, 8 minutes, 11.01.2013).
