Add: Krempl: Bundestag befragt Bürger zu Künstlicher Intelligenz

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -1261,6 +1261,11 @@
         (German translation:
         <a href="https://www.euractiv.de/section/digitale-agenda/news/europaeische-polizeibehoerden-planen-gemeinsame-gesichtserkennungsdatenbank/" hreflang="de" lang="de">Europäische Polizeibehörden planen gemeinsame Gesichtserkennungsdatenbank</a>.)
       </li>
+      <li><span lang="de">Krempl, Stefan:
+        <a href="https://www.heise.de/newsticker/meldung/Bundestag-befragt-Buerger-zu-Kuenstlicher-Intelligenz-4679954.html" hreflang="de">Bundestag befragt Bürger zu Künstlicher Intelligenz </a>,
+        <i class="website">heise.de</i></span>, 10.03.2020.
+        <br />The federal commission on artificial intelligence had been accused of going about its business behind closed doors.
+      </li>
     </ul>
 
 
