Add: Szabo: Artificial Intelligence Is Rushing Into Patient Care—And Could Raise Risks

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -1286,6 +1286,10 @@
         (Mainly an announcement of a &ldquo;Women in <abbr>AI</abbr> in Healtcare Dinner&rdquo; (22.11.2017) with
         Laura Douglas (Research Scientist at Babylon Health), Yinyin Yuan (Institute of Cancer Research) and Farideh Jalali (University of Manchester).)
       </li>
+      <li>Szabo, Liz:
+        <a href="https://www.scientificamerican.com/article/artificial-intelligence-is-rushing-into-patient-care-and-could-raise-risks/">Artificial Intelligence Is Rushing Into Patient Care—And Could Raise Risks</a>,
+        <i class="magazine">Scientific American</i>, 24.12.2019.
+      </li>
     </ul>
 
     <h3>Artificial Intelligence in Chess</h3>
