2004 edition of The Unwritten Rules of PhD Research

--- a/science/doctoral-research.html
+++ b/science/doctoral-research.html
@@ -86,8 +86,11 @@
       <li>Petre, Marian; Rugg, Gordon:
         <i class="booktitle">The Unwritten Rules of PhD Research</i>.
         Open University Press, 2010. (230 pages)
+        <del>
         <a href="http://www.mheducation.co.uk/9780335237029-emea-the-unwritten-rules-of-phd-research"><abbr>ISBN</abbr> 9780335237029</a> (paper)/
         <a href="http://www.mheducation.co.uk/9780335240265-emea-ebook-the-unwritten-rules-of-phd-research"><abbr>ISBN</abbr> 9780335240265</a> (e-book).
+        </del>
+        <a href="https://www.mheducation.co.uk/ebook-the-unwritten-rules-of-phd-research-9780335227662-emea"><abbr>ISBN</abbr>  9780335227662</a> (e-book, 2004 edition).
         <br /><a href="https://www.uel.ac.uk/rite/issues/vol1/1/bookreview/pp35-36/">Book review by Caroline Brennan (2011)</a>.
       </li>
       <li>Mullins, Gerry; Kiley, Margaret:
