--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -58,11 +58,19 @@
   <main>
     <blockquote id="introquote">
       <p>
+        <q>I calculate, ergo I sum.</q>
+        <cite>(Anonymous mathematician)</cite>
+      </p>
+    </blockquote>
+    <!--
+    <blockquote id="introquote">
+      <p>
         <q>The greatest shortcoming of the human race is our inability to understand the exponential function.</q>
         <cite><a href="https://en.wikipedia.org/wiki/Albert_Allen_Bartlett">Albert Allen Bartlett</a>.</cite>
         (See also <a href="http://www.albartlett.org/">Al Bartlett's website</a>.)
       </p>
     </blockquote>
+    -->
     <!-- See also 
       * Dr. Albert Bartlett The Exponential Function (11 minutes, published 25.08.2008): https://www.youtube.com/watch?v=LqcHG7QUK9k 
       * Kurt Cobb: "Albert Bartlett: On message about exponential growth to the end". Resilience, 15.09.2013. http://www.resilience.org/stories/2013-09-15/albert-bartlett-on-message-about-exponential-growth-to-the-end/ 
