Adapt quote author

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -59,7 +59,7 @@
     <blockquote id="introquote">
       <p>
         <q>I calculate, ergo I sum.</q>
-        <cite>(Anonymous mathematician)</cite>
+        <cite>René DesMaths</cite>
       </p>
     </blockquote>
     <!--
